# PWS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
PWS/: PWS.mdproj
include/glad/: glad.h
main.exe.dSYM/Contents/Resources/Relocations/aarch64/: main.exe.yml
src/: camera_class.h  extra_main_justincase.cpp  glad.c  ligma.cpp  main.cpp  mainCopy.cpp  sugma.cpp  text.cpp
src/AnimatedCharacterModel/: SK_character_idle.fbx  character_idle.fbx  gun_idle.dae  gun_idle.fbx  hairGirl2.dae  model_idle.dae  model_reload.dae
src/car_model/: ultrsalowpolycar.mtl
src/characterModel/: hairGirl1.mtl  hairGirl2.mtl
src/classes/: animation.h  animator.h  animdata.h  assimp_glm_helpers.h  bone.h  camera.h  enemy.h  game_object.h  meshCode.h  modelCode.h  player.h  rigidbody.cpp  rigidbody.h  rigidbody_notused.cpp  rigidbody_random_chatgptstuff.h  shaderCode.h  shaderCode_s.h  textShader.h
src/enemy/source/: poza.fbx
src/gunAnimated/: gun_idle.dae  gun_reload.dae
src/models/: arms_gun.mtl  bullet.mtl  enemy.mtl  playerAABB.mtl
src/models/box/: box.mtl
src/models/buildings/: building.mtl
src/models/car_model/: ultrsalowpolycar.mtl
src/models_animated/FPS_arms_animated/: FPS_arms_fire.fbx  FPS_arms_idle.fbx  FPS_arms_reload.fbx  FPS_arms_walk.fbx  fps_arms_fire.glb  fps_arms_idle.glb  fps_arms_reload.glb  fps_arms_walk.glb
src/models_animated/FPS_gun_animated/: FPS_gun_fire.fbx  FPS_gun_idle.fbx  FPS_gun_reload.fbx  FPS_gun_walk.fbx  fps_gun_fire.glb  fps_gun_idle.glb  fps_gun_reload.glb  fps_gun_walk.glb
src/models_animated/gunAnimated/: gun_idle.dae
src/scene/: bank.mtl
src/scene_old/: scene.mtl
src/shader_texture_stuff/: 330shader.fs  330shader.vs  420texture.fs  420texture.vs  520transform.fs  520transform.vs  520transformdisco.fs  610cordinates.fs  animated_model_loading.vs  camera.h  shaderCode_s.h  stb_image.cpp
